@@ -6,7 +6,6 @@ import it.units.erallab.hmsrobots.core.objects.Voxel;
 import it.units.erallab.hmsrobots.util.Grid;
 import it.units.erallab.hmsrobots.util.SerializationUtils;
 import it.units.erallab.hmsrobots.util.Utils;
-import it.units.malelab.jgea.core.util.Pair;
 
 import java.util.*;
 import java.util.function.Function;
@@ -18,7 +17,15 @@ public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFun
   private final Function<Voxel, Double> selectionFunction;
   private final boolean maxFirst;
 
-  public DevoConditionedHomoMLP(double innerLayerRatio, int nOfInnerLayers, int signals, Function<Voxel, Double> selectionFunction, boolean maxFirst, int nInitial, int nStep) {
+  public DevoConditionedHomoMLP(
+      double innerLayerRatio,
+      int nOfInnerLayers,
+      int signals,
+      Function<Voxel, Double> selectionFunction,
+      boolean maxFirst,
+      int nInitial,
+      int nStep
+  ) {
     super(innerLayerRatio, nOfInnerLayers, signals, nInitial, nStep, 0d);
     this.selectionFunction = selectionFunction;
     this.maxFirst = maxFirst;
@@ -27,7 +34,8 @@ public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFun
   public DevoConditionedHomoMLP(
       double innerLayerRatio, int nOfInnerLayers, int signals,
       Function<Voxel, Double> selectionFunction,
-      int nInitial, int nStep) {
+      int nInitial, int nStep
+  ) {
     this(innerLayerRatio, nOfInnerLayers, signals, selectionFunction, false, nInitial, nStep);
   }
 
@@ -47,12 +55,12 @@ public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFun
       if (maxFirst) {
         Collections.reverse(sortedVoxels);
       }
-      List<Pair<Integer, Integer>> nextPositions = sortedVoxels.stream()
+      List<Grid.Key> nextPositions = sortedVoxels.stream()
           .map(e -> getStrengthSortedEmptyNeighborsPositions(previousBody, e, strengths))
           .flatMap(List::stream).toList();
       body = Grid.create(previousBody, v -> (v != null) ? SerializationUtils.clone(voxelPrototype) : null);
       for (int i = 0; i < nStep; i++) {
-        body.set(nextPositions.get(i).first(), nextPositions.get(i).second(), SerializationUtils.clone(voxelPrototype));
+        body.set(nextPositions.get(i).x(), nextPositions.get(i).y(), SerializationUtils.clone(voxelPrototype));
       }
     }
     if (body.values().stream().noneMatch(Objects::nonNull)) {
@@ -61,31 +69,35 @@ public class DevoConditionedHomoMLP extends DevoHomoMLP implements PrototypedFun
     return body;
   }
 
-  private static List<Pair<Integer, Integer>> getEmptyNeighborsPositions(Grid<Voxel> grid, Grid.Entry<Voxel> entry) { // TODO should return Grid.Key
-    List<Pair<Integer, Integer>> emptyNeighbors = new ArrayList<>();
+  private static List<Grid.Key> getEmptyNeighborsPositions(Grid<Voxel> grid, Grid.Entry<Voxel> entry) {
+    List<Grid.Key> emptyNeighbors = new ArrayList<>();
     for (int d : new int[]{-1, 1}) {
       int x = entry.key().x();
       int y = entry.key().y();
       if ((x + d) >= 0 && (x + d) < grid.getW() && grid.get(x + d, y) == null) {
-        emptyNeighbors.add(Pair.of(x + d, y));
+        emptyNeighbors.add(new Grid.Key(x + d, y));
       }
       if ((y + d) >= 0 && (y + d) < grid.getH() && grid.get(x, y + d) == null) {
-        emptyNeighbors.add(Pair.of(x, y + d));
+        emptyNeighbors.add(new Grid.Key(x, y + d));
       }
     }
     return emptyNeighbors;
   }
 
-  private static List<Pair<Integer, Integer>> getStrengthSortedEmptyNeighborsPositions(Grid<Voxel> grid, Grid.Entry<Voxel> entry, Grid<Double> strengths) { // TODO should return Grid.Key
-    List<Pair<Integer, Integer>> emptyNeighbors = getEmptyNeighborsPositions(grid, entry);
+  private static List<Grid.Key> getStrengthSortedEmptyNeighborsPositions(
+      Grid<Voxel> grid,
+      Grid.Entry<Voxel> entry,
+      Grid<Double> strengths
+  ) {
+    List<Grid.Key> emptyNeighbors = getEmptyNeighborsPositions(grid, entry);
     if (emptyNeighbors.isEmpty()) {
       return emptyNeighbors;
     }
     return strengths.stream()
         .sorted(Comparator.comparingDouble(Grid.Entry::value))
-        .map(e -> Pair.of(e.key().x(), e.key().y()))
+        .map(Grid.Entry::key)
         .filter(emptyNeighbors::contains)
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
